[gd_scene load_steps=16 format=3 uid="uid://8iecrbo4lfw6"]

[ext_resource type="Texture2D" uid="uid://e4104g27yhlv" path="res://Enemies/Thorax/Idle/1.png" id="1_0bjuj"]
[ext_resource type="Script" path="res://Enemies/Thorax/thorax.gd" id="1_d4pik"]
[ext_resource type="Texture2D" uid="uid://c5k6s0yipureg" path="res://Enemies/Thorax/Idle/2.png" id="2_7s435"]
[ext_resource type="Texture2D" uid="uid://t4sdfnmv37o2" path="res://Enemies/Thorax/Jump/1.png" id="3_hh2pv"]
[ext_resource type="Texture2D" uid="uid://bco6nime4umbo" path="res://Enemies/Thorax/Jump/2.png" id="4_ed1lv"]
[ext_resource type="Texture2D" uid="uid://bcmtsfyfsqqnx" path="res://Enemies/Thorax/Jump/3.png" id="5_ikn0w"]
[ext_resource type="Texture2D" uid="uid://bsxcnbaj72jhw" path="res://Enemies/Thorax/Jump/4.png" id="6_ycxsn"]

[sub_resource type="Animation" id="Animation_txd5m"]
resource_name = "Idle"
length = 0.6
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_o1d5c"]
resource_name = "Jump"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qu7gi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_35ji3"]
_data = {
"Idle": SubResource("Animation_txd5m"),
"Jump": SubResource("Animation_o1d5c"),
"RESET": SubResource("Animation_qu7gi")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_826o6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_0bjuj")
}, {
"duration": 1.0,
"texture": ExtResource("2_7s435")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hh2pv")
}, {
"duration": 1.0,
"texture": ExtResource("4_ed1lv")
}, {
"duration": 1.0,
"texture": ExtResource("5_ikn0w")
}, {
"duration": 1.0,
"texture": ExtResource("6_ycxsn")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aedxm"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gcmtj"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x04hm"]
radius = 132.242

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource("1_d4pik")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_35ji3")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_826o6")
animation = &"Idle"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_aedxm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_gcmtj")
debug_color = Color(0.560784, 0.431373, 0.290196, 0.419608)

[node name="Search" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Search"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_x04hm")
debug_color = Color(0.984314, 0, 0.341176, 0.419608)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Search" to="." method="_on_search_body_entered"]
[connection signal="body_exited" from="Search" to="." method="_on_search_body_exited"]
